# Lane_detection_UFLDv2_CPP_deployment

./: .gitignore  CMakeLists.txt  README.md  lane_detection_api_sample.cpp  pth2onnx.py
include/: lane_detection_UFLDv2.h
src/: lane_detection_UFLDv2.cpp  yuv2rgb.cu  yuv2rgb.cuh
